--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -19,6 +19,7 @@
 			<%= f.label :password_confirmation, "Confirmation" %>
 			<%= f.password_field :password_confirmation, class: 'form-control' %>
 
-			<%= f.submit "Create my account", class: "btn btn-primary" %> <% end %>
+			<%= f.submit "Create my account", class: "btn btn-primary" %> 
+		<% end %>
   </div>
 </div>
